# FastDose

./: .gitignore  CMakeLists.txt  Dockerfile  KernelGen.sh  MCRef.sh  OptBench.sh  PreProcess.sh  README.md  dockerBuild.sh  imrtOpt.sh  nohup.out  planOptm.sh  profile.sh  readRead.m  run.sh
FastDoseExample/: CMakeLists.txt  DoseBench.py  argparse.cpp  argparse.h  init.cu  init.cuh  init.h  main.cu  scripts.py  singleBeamBEV.cu
FastDoseLib/: CMakeLists.txt
FastDoseLib/include/: DoseComp.cuh  TermaComp.cuh  beam.cuh  density.cuh  fastdose.cuh  geom.cuh  helper_math.cuh  kernel.cuh  macros.h  macros.h.in  spectrum.cuh  utils.cuh
FastDoseLib/src/: DoseComp.cu  TermaComp.cu  beam.cu  density.cu  geom.cu  kernel.cu  spectrum.cu  utils.cu
IMRTOpt/: CMakeLists.txt  MaskGen.cu  OptBench.cu  main.cu
IMRTOpt/include/: IMRTArgs.h  IMRTBeamBundle.cuh  IMRTDebug.cuh  IMRTDoseMat.cuh  IMRTDoseMatEigen.cuh  IMRTDoseMatEns.cuh  IMRTInit.cuh  IMRTOptBench.cuh  IMRTOptimize.cuh  IMRTOptimize_var.cuh  IMRTOptimize_var.h  IMRTgeom.cuh  geomKernels.cuh
IMRTOpt/src/: IMRTArgs.cpp  IMRTBeamBundle.cu  IMRTDebug.cpp  IMRTDebug.cu  IMRTDebug_var.cu  IMRTDirectInterp.cpp.in  IMRTDoseMat.cu  IMRTDoseMatEigen.cu  IMRTEigenLoad.cpp  IMRTEigenLoad.cu  IMRTInit.cu  IMRTOptBench.cu  IMRTOptUtils.cu  IMRTOptimize.cu  IMRTOptimize_var.cpp  IMRTOptimize_var.cu  IMRTOptimize_var1.cu  IMRTSparseMat.cu  IMRTSparseMatEns.cu  IMRTSparseMatManip.cu  IMRTgeom.cu  MasksExamine.py  doseAnalyze.py
KernelGen/: BEVwarp.py  CMakeLists.txt  PostProcess.py  derivation.md
KernelGen/include/: ActionInitialization.h  ArgKernelGen.h  DetectorConstruction.h  EventAction.h  EventInfo.h  PhysicsList.h  PrimaryGeneratorAction.h  Run.h  RunAction.h  StepMax.h  TrackingAction.h  Trajectory.h  TrajectoryPoint.h
KernelGen/src/: ActionInitialization.cpp  ArgKernelGen.cpp  DetectorConstruction.cpp  EventAction.cpp  PhysicsList.cpp  PrimaryGeneratorAction.cpp  Run.cpp  RunAction.cpp  StepMax.cpp  TrackingAction.cpp  Trajectory.cpp  main.cpp
MCReference/: CMakeLists.txt
MCReference/include/: ActionInitializationMCRef.h  ArgMCRef.h  DetectorConstructionMCRef.h  PhysicsListMCRef.h  PrimaryGeneratorActionMCRef.h  RunActionMCRef.h  RunMCRef.h  StepMaxMCRef.h  TrackingActionMCRef.h  TrajectoryMCRef.h  TrajectoryPointMCRef.h
MCReference/src/: ActionInitializationMCRef.cpp  ArgMCRef.cpp  DetectorConstructionMCRef.cpp  PhysicsListMCRef.cpp  PrimaryGeneratorActionMCRef.cpp  RunActionMCRef.cpp  RunMCRef.cpp  StepMaxMCRef.cpp  TrackingActionMCRef.cpp  TrajectoryMCRef.cpp  doseExamine.py  main.cpp
MCRefernce/: CMakeLists.txt
MCRefernce/include/: argparse.h
PlanOptm/: CMakeLists.txt  PlanOptmArgs.cu  PlanOptmArgs.cuh  PlanOptmBeamBundle.cu  PlanOptmBeamBundle.cuh  PlanOptmInit.cu  PlanOptmInit.cuh  PlanOptmTestCase.cu  PlanOptmTestCase.cuh  PlanOptmTestCaseSparse.cu  main.cu  scripts.py
PreProcess/: CMakeLists.txt  main.cpp
PreProcess/include/: PreProcessArgs.h  PreProcessHelper.h  PreProcessInit.h  PreProcessROI.h  PreProcessRingStruct.cuh  make_tex_surf.cuh  rtimages.h  rtstruct.h
PreProcess/src/: PreProcessArgs.cpp  PreProcessHelper.cu  PreProcessInit.cpp  PreProcessROI.cu  PreProcessRingStructure.cu  rtimages.cpp  rtstruct.cpp
boxScore/: Analyze.py  CMakeLists.txt  main.cpp
boxScore/include/: ActionInitializationBS.h  DetectorConstructionBS.h  PhantomDefBS.h  PhysicsListBS.h  PrimaryGeneratorActionBS.h  RunActionBS.h  RunBS.h  StepMaxBS.h  argparseBS.h
boxScore/src/: ActionInitializationBS.cpp  DetectorConstructionBS.cpp  PhantomDefBS.cpp  PhysicsListBS.cpp  PrimaryGeneratorActionBS.cpp  RunActionBS.cpp  RunBS.cpp  StepMaxBS.cpp  argparseBS.cpp
cubeScore/: CMakeLists.txt  SlabPhantom.csv  WaterMaterial.csv  WaterPhantom.csv  cubeScoreMain.cpp  material.csv  spectrum.csv
cubeScore/include/: ActionInitCubeScore.h  ArgsCubeScore.h  DetectorCubeScore.h  ParamsCubeScore.h
cubeScore/src/: ActionInitCubeScore.cpp  ArgsCubeScore.cpp  DetectorCubeScore.cpp  ParamsCubeScore.cpp
dockerScripts/: dockerRun.sh
dockerScripts/HeadNeck/: dosecalc.sh  optimize.sh  preprocess.sh  scripts.py
dockerScripts/Pancreas/: containersPurge.sh  dosecalc.sh  optimize.sh  preprocess.sh  scripts.py
scripts/: BScore.sh  PreProcess.sh  cubeScore.sh  doseBench.py  doseDataInit.m  examine.py  imrtOpt.sh  maskGen.sh  planOptm.sh  readDose.m  run.sh  run_dosecalc.sh  singleBeamBEV.sh
